[tool.poetry]
name = "besca"
version = "0.1.0"
description = ""
authors =  ["Manuel Kohler <manuel.kohler@roche.com>"]

[tool.poetry.dependencies]
python = "~3.8"
nbconvert = "*"
anndata = "*"
mistune = "^0.8.4"
versioneer = "*"
scanorama = "^1.7.1"
sinfo = "^0.3.1"
sphinx-automodapi = "*"
pytest = "^7.1.2"
sphinx_rtd_theme = "*"
scvelo = "*"
python-igraph = "^0.9.8"
plotly = "^5.4.0"
ipykernel = "*"
pyyaml = "*"
pandas = "^1.1.0"
dominate = "^2.6.0"
matplotlib = "^3.5.0"
requests = "^2.26.0"
flask-restful = "^0.3.9"
nbsphinx = "*"
deprecation = "*"
sphinx = "*"
pip = "*"
pydot = "^1.4.2"
scanpy = "*"
scipy = "^1.8.0"
prometheus_client = "*"
nbformat = "*"
sphinx-copybutton = "*"
umap-learn = "^0.5.2"
ipython = "*"
sphinx-gallery = "*"
leidenalg = "^0.8.3"
mygene = "^3.2.2"
seaborn = "^0.11.2"
bbknn = "^1.5.1"
nbclean = "^0.3.2"
docutils = "0.18"
myst-parser = "^0.18.0"
numba = "0.56.2"
numpy = "1.23.2"
scvi-tools = "^0.17.3"

[tool.poetry.dev-dependencies]

[build-system]
requires =  "poetry-core^1.0.0"
build-backend = "poetry.core.masonry.api"
