[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "besca"
version = "3.0.0"
description = "BESCA — BEyond Single Cell Analysis toolkit for single-cell transcriptomics."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
authors = [
    {name = "BEDA community", email = "manuel.kohler@roche.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "scipy>=1.12",
    "flask-restful",
    "dominate",
    "requests",
    "numpy>=1.26,<2.1",
    "scanpy>=1.10",
    "plotly",
    "anndata>=0.10",
    "seaborn>=0.13",
    "mygene",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "bbknn>=1.6",
    "scikit-learn>=1.4",
    "igraph>=0.11",
    "leidenalg>=0.10",
    "scanorama>=1.7.4",
    "scvelo>=0.3",
    "umap-learn>=0.5.5",
    "session-info>=1.0",
    "pydot>=2.0",
    "scvi-tools>=1.1",
    "deprecation",
    "gseapy>=1.1",
    "ipython",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "nbclean>=0.3.2",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-gallery",
    "sphinx-automodapi",
    "nbsphinx",
    "pandoc",
]

[project.urls]
Homepage = "https://github.com/bedapub/besca"
Documentation = "https://bedapub.github.io/besca/"
Repository = "https://github.com/bedapub/besca"
Issues = "https://github.com/bedapub/besca/issues"

[tool.setuptools.packages.find]
exclude = ["devtools*", "tests*", "docs*", "benchmarks*"]

[tool.setuptools.package-data]
"besca.datasets.data" = ["*.h5ad"]
"besca.st" = ["*.css"]
"besca.datasets.nomenclature" = ["*.tsv"]
"besca.datasets.mito_files" = ["*.tsv"]
"besca.datasets.genesets" = ["*.gmt", "*.tsv"]
"besca.datasets.homologs" = ["*.tsv"]

[tool.pytest.ini_options]
addopts = "-p no:warnings --junit-xml=tests/output_junit.xml"
testpaths = ["tests", "besca"]
